CORE-0: fix description

--- a/src/app/admin-boiler-parts/admin-boiler-parts.component.html
+++ b/src/app/admin-boiler-parts/admin-boiler-parts.component.html
@@ -112,7 +112,7 @@
             </div>
 
             <div class="col-md-6 mb-3">
-              <label>Совместимость</label>
+              <label>Описание</label>
               <input formControlName="compatibility" class="form-control" />
             </div>
             <div class="col-md-6 mb-3">
